[package]
name = "ser_mapper"
version = "0.2.1"
edition = "2024"
authors = ["Shashank Verma <shank03>"]
license = "MIT"
description = "Mapped DTO serialzation wrapper for DBO/Model"
repository = "https://github.com/shank03/ser_mapper"
readme = "README.md"
keywords = ["serialize", "model", "mapper", "dto-mapper", "model-mapper"]
categories = ["data-structures", "web-programming", "rust-patterns"]

[dependencies]
paste = "1.0.15"
serde = "1.0.219"

[dev-dependencies]
serde_json = "1.0.140"
